@@ -1,10 +1,14 @@
-2021-04-22  Olaf Bergmann  <bergmann@tzi.org>
+2021-05-04  Olaf Bergmann  <bergmann@tzi.org>
 
 	Change summary for version 4.3.0:
 
         * Include directory updated from include/coap2 to include/coap3 as
           this is a major version change.
             * Other code references updated from coap2 to coap3.
+        * Examples now have the underlying (D)TLS library name as a suffix.
+          E.g. coap-server-openssl
+        * Examples and libraries can be installed with default names using
+          ./configure --enable-add-default-names
         * Many call-back handlers have had their parameter lists changed, some
           variables are made const and other ones removed as they can be easily
           reconstructed if needed.
